Arreglo de la reservacion

--- a/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
+++ b/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
@@ -50,7 +50,7 @@
 
                 <div class="form-group">
                     <label>Confirmar contraseña:</label>
-                    <input type="password" @bind="cliente.Clave" class="form-control" />
+                    <input type="password" @bind="Confirmar" class="form-control" />
                 </div>
 
             </form>
