--- a/SweetDreams/SweetDreams.Client/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Client/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#38AFFC">
+﻿<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#8ce273">
     <a class="navbar-brand" href="">
         <img src="Resources\HotelPNG.png" style="width:35px;" />
-        Sweet Dreams Admin
+        Sweet Dreams
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
