--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
@@ -125,11 +125,10 @@
     protected override async Task OnInitializedAsync()
     {
         Caracteristicas[0] = "Una cama";
-        Caracteristicas[1] = "Lavavo";
+        Caracteristicas[1] = "Lavabo";
         Caracteristicas[2] = "Cama doble";
         Caracteristicas[3] = "Refrigerador";
         Caracteristicas[4] = "Amueblado";
-
 
         await BuscarParametro();
     }
