--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
@@ -130,6 +130,7 @@
         Caracteristicas[3] = "Refrigerador";
         Caracteristicas[4] = "Amueblado";
 
+        Nuevo();
         await BuscarParametro();
     }
 
