--- a/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
@@ -19,6 +19,7 @@
                     <a class="dropdown-item" href="RHabitacion">Habitación</a>
                     <a class="dropdown-item" href="RReservaciones">Reservaciones</a>
                     <a class="dropdown-item" href="RClientes">Clientes</a>
+                    <a class="dropdown-item" href="RActividades">Actividades</a>
                 </div>
             </li>
             <li class="nav-item dropdown active">
