agregando consultas al navmenu

--- a/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
@@ -28,7 +28,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="CHabitacion">Habitación</a>
+                    <a class="dropdown-item" href="CReservaciones">Reservaciones</a>
                     <a class="dropdown-item" href="CClientes">Clientes</a>
+                    <a class="dropdown-item" href="CActividades">Actividades</a>
                 </div>
             </li>
         </ul>
