--- a/SweetDreams/SweetDreams.Client/_Imports.razor
+++ b/SweetDreams/SweetDreams.Client/_Imports.razor
@@ -10,4 +10,5 @@
 @using Blazored.Toast
 @using Blazored.Toast.Services
 @using BlazorInputFile
-
+@using Microsoft.AspNetCore.Authorization
+@using System.Web
