--- a/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroReservaciones.razor
+++ b/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroReservaciones.razor
@@ -17,14 +17,11 @@
         </div>
         <div class="card-body">
             <form>
-
-
-
                 <div class="form-row">
                     <div class="form-group">
                         <label>Tipo Habitacion</label>
                         <div class="input-group">
-                            <select class="form-control" @bind="Filtro">
+                            <select class="form-control" @bind="FiltroHabitacion">
                                 <option value="0">Todo</option>
                                 <option value="1">Individual</option>
                                 <option value="2">Doble</option>
@@ -32,7 +29,7 @@
                                 <option value="4">Suite Junior</option>
                             </select>
                             <div class="input-group-append">
-                                <button type="button" class="btn btn-primary input-group-text" @onclick="@(u => Consultar())"><i class="oi oi-list-rich" /> Consultar</button>
+                                <button type="button" class="btn btn-primary input-group-text" @onclick="@(u => ConsultarHabitaciones())"><i class="oi oi-list-rich" /> Consultar</button>
                             </div>
                         </div>
                     </div>
@@ -54,8 +51,6 @@
                         <tbody class="bg-white">
                             @for (int i = 0; i < ListaHabitacion.Count; i++)
                             {
-                                
-
                                 int index = i;
                                 Seleccion.Add(false);
                                 <tr>
@@ -103,7 +98,7 @@
 
                 <div class="form-group">
                     <label>Cantidad de Niños:</label>
-                    <select class="form-control" @bind="CNinoSeleccionado">
+                    <select class="form-control" @bind="CantidadNinoSeleccionado">
                         <option value="0">Ninguno</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -134,9 +129,9 @@
                             {
                                 <tr>
                                     <td>@item.NumeroHabitacion</td>
-                                    <td>@item.THabitacion</td>
-                                    <td>@item.CAdultos</td>
-                                    <td>@item.CNinos</td>
+                                    <td>@item.Tipo</td>
+                                    <td>@item.CantidadAdultos</td>
+                                    <td>@item.CantidadNinos</td>
                                     <td>@item.Precio</td>
                                 </tr>
                             }
@@ -152,7 +147,7 @@
 
                 <div class="form-group">
                     <label>Tarjeta de Credito:</label>
-                    <InputText @bind-Value="reservacion.NumeroTarjeta" />
+                    <InputText @bind-Value="reservacion.Tarjeta" />
                 </div>
 
                 <div class="form-group">
@@ -161,42 +156,39 @@
                     <ValidationMessage For="@(() => reservacion.FechaExpiracion)" />
                 </div>
 
-                <div class="form-group">
+                <div class="form-group">                                    
                     <label>Codigo de Seguridad:</label>
-                    <InputText @bind-Value="reservacion.CodigoSeguridad" />
+                    <InputText @bind-Value="reservacion.Codigo" />
                 </div>
-
             </form>
         </div>
         <div class="card-footer">
             <div class="form-group text-center" display: inline-block>
-                <button type="submit" class="btn btn-lg btn-success oi oi-cloud-upload" @onclick="Registrar">Registrar</button>
-                <a class="btn btn-lg btn-danger oi oi-circle-x" href="">Cancelar</a>
+                <button type="submit" class="btn btn-lg btn-success oi oi-cloud-upload" @onclick="Guardar"> Guardar</button>
             </div>
         </div>
     </div>
 
-
-
- 
 </EditForm>
-
-
 
 @code {
 
+    [Parameter]
+    public int Id { get; set; }
+
     public int CantidadAdultoSeleccionado { get; set; }
-    public int CNinoSeleccionado { get; set; }
-    public int THabitacionSeleccionado { get; set; }
-    public int Cantidad { get; set; }
-    public string Filtro { get; set; }
+    public int CantidadNinoSeleccionado { get; set; }
+    public string FiltroCliente { get; set; }
+    public string FiltroHabitacion { get; set; }
 
     Reservaciones reservacion = new Reservaciones();
-
     Habitacion habitacion = new Habitacion();
 
     private List<Habitacion> ListaHabitacion { get; set; }
+
     public List<bool> Seleccion { get; set; }
+
+    public string Criterio { get; set; }
 
     protected override void OnInitialized()
     {
@@ -209,17 +201,16 @@
         ListaHabitacion = new List<Habitacion>();
         Seleccion = new List<bool>();
         CantidadAdultoSeleccionado = 0;
-        CNinoSeleccionado = 0;
+        CantidadNinoSeleccionado = 0;
+        Criterio = string.Empty;
     }
 
-    
-
-    public async Task Consultar()
+    public async Task ConsultarHabitaciones()
     {
         ListaHabitacion = (await Http.GetFromJsonAsync<Habitacion[]>($"http://localhost:5000/Api/Habitacion")).ToList();
         ListaHabitacion = ListaHabitacion.Where(h => h.Estado == true).ToList();
 
-        switch (Filtro)
+        switch (FiltroHabitacion)
         {
             case "0":
                 break;
@@ -251,6 +242,7 @@
         habitacion = ListaHabitacion[index];
     }
 
+
     public void Agregar()
     {
         if (habitacion.HabitacionId == 0)
@@ -270,14 +262,15 @@
             DetalleId = 0,
             ReservacionId = reservacion.ReservacionId,
             NumeroHabitacion = habitacion.NumeroHabitacion,
-            CAdultos = CantidadAdultoSeleccionado,
-            CNinos = CNinoSeleccionado,
-            THabitacion = habitacion.Tipo,
+            CantidadAdultos = CantidadAdultoSeleccionado,
+            CantidadNinos = CantidadNinoSeleccionado,
+            Tipo = habitacion.Tipo,
             Precio = habitacion.Precio,
             HabitacionId = habitacion.HabitacionId
         });
 
         reservacion.Balance += habitacion.Precio;
+        habitacion.Estado = false;
 
         habitacion = new Habitacion();
         for (int i = 0; i < Seleccion.Count(); i++)
@@ -287,7 +280,7 @@
         }
     }
 
-    private async Task Registrar()
+    private async Task Guardar()
     {
         var guardado = await Http.PostAsJsonAsync("http://localhost:5000/Api/Reservacion", reservacion);
 
@@ -302,6 +295,4 @@
             toast.ShowError("Guardado incorrecto");
 
     }
-
-
 }
